[package]
name = "blc"
version = "0.4.1"
authors = ["ljedrz <ljedrz@gmail.com>"]
description = "An implementation of the binary lambda calculus."
repository = "https://github.com/ljedrz/blc"
documentation = "https://docs.rs/blc"
readme = "README.md"
license = "CC0-1.0"
keywords = ["lambda", "calculus", "church", "functional", "binary"]
categories = ["encoding"]
exclude = [".cargo/*"]

[dependencies]
lambda_calculus = "0.8.0"
